added leaveTeam and removeMemberFromTeam
